@@ -204,7 +204,7 @@
   </td>
 
 </tr><tr>
-  <td><font color="blue">Airline</font><sup><a href="#help" onclick='JavaScript:help("airline")'>?</a></sup></td>
+  <td>Airline<sup><a href="#help" onclick='JavaScript:help("airline")'>?</a></sup></td>
   <td><input type="text" name="airline" id="airline" size="60" tabindex="8" onChange='JavaScript:flightNumberToAirline("AIRLINE")' class="hintTextbox" value="Enter airline name or code"/><div id="airlineAC"></div>
       <input type="hidden" name="airline_id" id="airline_id"/></td>
   <td><img src="/img/icon_airline.png" title="Search for airline" height=17 width=17 onclick='JavaScript:popNewAirline()'/ style="margin-left: 5px"/></td>
